# CostGuard

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  fly.toml  pyproject.toml  railway.json  render.yaml
.github/workflows/: ci.yml
backend/: __init__.py  alerting.py  circuit_breaker.py  config.py  logger.py  main.py  metrics.py  middleware.py  models.py  proxy.py
deploy/: prometheus.yml
deploy/grafana/dashboards/: costguard.json  dashboards.yml
evaluation/: __init__.py  data_loader.py  engine.py  observability.py  pricing.py  question_generator.py  token_counter.py
frontend/: __init__.py  app.py
frontend/pages/: Privacy_Policy.py
scripts/: dev.sh  start.sh
tests/: __init__.py  locustfile.py  test_evaluation.py  test_proxy.py
