[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "costguard"
version = "0.1.0"
description = "Instant LLM cost estimation and model recommendation from your data"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "CostGuard", email = "hello@costguard.dev" }]
keywords = ["llm", "cost", "estimation", "benchmark", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "streamlit>=1.40.0",
    "pandas>=2.2.0",
    "pyarrow>=17.0.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.8.0",
    "anthropic>=0.40.0",
    "openai>=1.55.0",
    "loguru>=0.7.3",
    "tenacity>=9.0.0",
    "plotly>=5.24.0",
    "aiofiles>=24.1.0",
    "rich>=13.9.0",
    # RealDataAgentBench — evaluation engine
    "realdataagentbench @ git+https://github.com/patibandlavenkatamanideep/RealDataAgentBench.git",
    # Additional providers supported by RDAB
    "google-generativeai>=0.8.0",
    "groq>=0.11.0",
    "scipy>=1.13.0",
    "scikit-learn>=1.5.0",
    "RestrictedPython>=7.0",
    "PyYAML>=6.0",
    # Monitoring and observability
    "prometheus-client>=0.21.0",
    # Optional OTEL (install separately for full tracing)
    # "opentelemetry-sdk>=1.27.0",
    # "opentelemetry-exporter-otlp-proto-grpc>=1.27.0",
    # "opentelemetry-instrumentation-fastapi>=0.48b0",
    # "opentelemetry-instrumentation-httpx>=0.48b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "httpx>=0.27.0",
]

[project.scripts]
costguard-api = "backend.main:run"
costguard-ui = "frontend.app:run"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["backend", "frontend", "evaluation"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=backend --cov=evaluation --cov-report=term-missing"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
